lots of updates

--- a/DiffractionStudy_Automation_new.ipynb
+++ b/DiffractionStudy_Automation_new.ipynb
@@ -52,7 +52,6 @@
        " 'ASRL3::INSTR',\n",
        " 'ASRL4::INSTR',\n",
        " 'ASRL5::INSTR',\n",
-       " 'ASRL6::INSTR',\n",
        " 'ASRL7::INSTR',\n",
        " 'ASRL8::INSTR',\n",
        " 'ASRL9::INSTR',\n",
@@ -102,8 +101,12 @@
     "# under Tools->Port\n",
     "# This time is was COM3\n",
     "board = pyfirmata.Arduino('COM3')\n",
+    "\n",
+    "# must set iterator in order to take input (the button)\n",
+    "# make sure to run only once\n",
     "it = pyfirmata.util.Iterator(board)\n",
     "it.start()\n",
+    "\n",
     "#board_led = pyfirmata.Arduino('COM3')\n",
     "#board_sipm = pyfirmata.Arduino('COM4') "
    ]
@@ -156,20 +159,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "complimentary-credits",
+   "execution_count": 12,
+   "id": "demographic-criminal",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------WARNING!---------------------\n",
+      "sipm motor has reached edge\n",
+      "Moved away from edge, new positions is 235.975 mm\n",
+      "-------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "245.97"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "exp.led_motor.MoveMotor(-5)"
+    "exp.sipm_motor.MoveMotor(10)\n",
+    "exp.sipm_motor.GetCurrentPosition()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "missing-people",
+   "id": "southern-experience",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "violent-booking",
+   "id": "overhead-shareware",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,14 +222,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "combined-preserve",
+   "id": "laden-exposure",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "id": "reliable-davis",
    "metadata": {},
    "outputs": [
@@ -217,7 +242,7 @@
     }
    ],
    "source": [
-    "#exp.ResetZero()"
+    "exp.ResetZero()"
    ]
   },
   {
@@ -232,17 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "welsh-hungarian",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0115131072201393"
+       "0.00049821899744984"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,6 +725,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
