Added README and improved documentation

--- a/Motor_control_testing.ipynb
+++ b/Motor_control_testing.ipynb
@@ -8,6 +8,8 @@
     "# Motor Control testing\n",
     "This code tests the control of the PRUSA research NEMA17 1.8 degree x axis Stepper Motors using an Arduino UNO Board and an EasyDriver. Below is the schematic of how to set up the electronics for the circuit. \n",
     "\n",
+    "Use this notebook to setup and test your motor and arduino connection. Use motor.py functions to more easily automate motor control.\n",
+    "\n",
     "Steps to run this test:\n",
     "1. Build the board as shown below. (note: the voltage supply must be greater tha 6V and be constant)\n",
     "2. Connect the Arduino to this computer.\n",
@@ -29,18 +31,16 @@
     "\n",
     "### Notes and measurements\n",
     "\n",
-    "Length of the rod = 29 cm\n",
-    "Length of the mounting piece = 5.1 cm\n",
-    "1 microstep = 1 write high\n",
-    "1600 microsteps per revolution\n",
-    "threads per inch = 13 (one thread is possible one revolution)\n",
+    "- Length of the rod = 29 cm\n",
+    "- Length of the mounting piece = 5.1 cm\n",
+    "- 1 microstep = 1 write high\n",
+    "- 1600 microsteps per revolution\n",
+    "- threads per inch = 13 (one thread is possible one revolution)\n",
     "\n",
-    "try and move ~5 centimeters (1.96850394 in)\n",
+    "- 1600 steps = 1 revolution = 1/13 inches = 0.195384615 cms\n",
+    "- 1 step = 0.00012211538437500001 cm = 0.122 micrometer\n",
     "\n",
-    "1600 steps = 1 revolution = 1/13 inches = 0.195384615 cms\n",
-    "1 step = 0.00012211538437500001 cm = 0.122 micrometer\n",
-    "\n",
-    "5 cm ~ 40944 microsteps"
+    "- 5 cm ~ 40944 microsteps"
    ]
   },
   {
@@ -89,8 +89,7 @@
     "# Use Arduino IDE to find the port name\n",
     "# under Tools->Port\n",
     "# This time is was COM3\n",
-    "board_sipm = pyfirmata.Arduino( 'COM3') \n",
-    "#board_x = pyfirmata.Arduino('COM6')"
+    "board = pyfirmata.Arduino( 'COM3') "
    ]
   },
   {
@@ -100,14 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run the motor\n",
-    "\n",
-    "board_sipm.digital[8].write(1) # stepping pin\n",
-    "board_sipm.digital[9].write(1) # direction pin\n",
-    "board_sipm.digital[10].write(1) # stepping pin\n",
-    "board_sipm.digital[11].write(1) # direction pi\n",
-    "#board_x.digital[3].write(1) # stepping pin\n",
-    "#board_x.digital[4].write(1) # direction pi"
+    "# Setup the pins on the arduino\n",
+    "board.digital[8].write(1) # stepping pin \n",
+    "board.digital[9].write(1) # direction pin"
    ]
   },
   {
@@ -117,14 +111,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reps = 500 #200*5 # 40944 # 100 \n",
+    "# Run the motor. Use this to test different directions and lengths of movement\n",
+    "reps = 500 # ammount to move the motor \n",
     "for i in range(reps+1):\n",
-    "    #step(board_x,3,4, direction=1) # led motor (Direction: down=0, up=1)\n",
-    "    #step(board_sipm,8,9, direction=-1)\n",
-    "    step(board_sipm,10,11, direction=-1)\n",
-    "    #step(10,11, direction=0) # LED motor\n",
-    "    #step(4,5)\n",
-    "    #time.sleep(0.01)"
+    "    step(board_sipm,8,9, direction=-1) #(1 = up, -1=down)"
    ]
   },
   {
