--- a/DiffractionStudy_Automation_new.ipynb
+++ b/DiffractionStudy_Automation_new.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "weird-choir",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "related-philosophy",
    "metadata": {
     "scrolled": true
@@ -50,16 +50,11 @@
       "text/plain": [
        "('USB0::0x05FF::0x1023::4206N21552::INSTR',\n",
        " 'ASRL3::INSTR',\n",
-       " 'ASRL4::INSTR',\n",
-       " 'ASRL5::INSTR',\n",
-       " 'ASRL7::INSTR',\n",
-       " 'ASRL8::INSTR',\n",
-       " 'ASRL9::INSTR',\n",
        " 'ASRL10::INSTR',\n",
        " 'ASRL12::INSTR')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "olympic-occasions",
    "metadata": {},
    "outputs": [],
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "starting-triple",
    "metadata": {},
    "outputs": [],
@@ -121,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "governing-melbourne",
    "metadata": {},
    "outputs": [],
@@ -133,15 +128,15 @@
     "led_step_pin = 10\n",
     "led_dir_pin = 11\n",
     "led_button_pin = 6\n",
-    "sipm_motor = Motor(board, sipm_step_pin, sipm_dir_pin, sipm_button_pin, 'sipm')\n",
-    "led_motor = Motor(board, led_step_pin, led_dir_pin, led_button_pin, 'led')\n",
+    "sipm_motor = Motor(board, sipm_step_pin, sipm_dir_pin, 'sipm', sipm_button_pin)\n",
+    "led_motor = Motor(board, led_step_pin, led_dir_pin, 'led', led_button_pin)\n",
     "#sipm_motor.CreatePositionFile()\n",
     "#led_motor.CreatePositionFile()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "competitive-notion",
    "metadata": {},
    "outputs": [],
@@ -160,25 +155,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "demographic-criminal",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "smaller-thompson",
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------WARNING!---------------------\n",
-      "sipm motor has reached edge\n",
-      "Moved away from edge, new positions is 235.975 mm\n",
-      "-------------------------------------------------\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "245.97"
+       "5"
       ]
      },
      "execution_count": 12,
@@ -187,7 +170,30 @@
     }
    ],
    "source": [
-    "exp.sipm_motor.MoveMotor(10)\n",
+    "exp.sipm_motor.button_pin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "demographic-criminal",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117.71000000000001"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.sipm_motor.MoveMotor(10.)\n",
     "exp.sipm_motor.GetCurrentPosition()"
    ]
   },
