--- a/PyVisa_tutorial.ipynb
+++ b/PyVisa_tutorial.ipynb
@@ -31,7 +31,15 @@
     {
      "data": {
       "text/plain": [
-       "('USB0::0x05FF::0x1023::4206N21552::INSTR', 'ASRL3::INSTR', 'ASRL10::INSTR')"
+       "('USB0::0x05FF::0x1023::4206N21552::INSTR',\n",
+       " 'ASRL3::INSTR',\n",
+       " 'ASRL4::INSTR',\n",
+       " 'ASRL5::INSTR',\n",
+       " 'ASRL7::INSTR',\n",
+       " 'ASRL8::INSTR',\n",
+       " 'ASRL10::INSTR',\n",
+       " 'ASRL12::INSTR',\n",
+       " 'ASRL14::INSTR')"
       ]
      },
      "execution_count": 2,
@@ -96,17 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "reflected-strategy",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'VBS 2\\n'"
+       "'VBS 1\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "proud-planning",
    "metadata": {},
    "outputs": [],
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "alpine-alarm",
    "metadata": {
     "scrolled": true
@@ -145,7 +153,7 @@
        "(65, <StatusCode.success: 0>)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "pleased-scene",
    "metadata": {},
    "outputs": [
@@ -169,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result = 0\n",
+      "Result = VBS 0.107625600649044\n",
       "\n"
      ]
     }
@@ -209,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "harmful-february",
    "metadata": {},
    "outputs": [],
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "confused-carry",
    "metadata": {},
    "outputs": [
@@ -232,7 +240,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Result = 7.09852630883688\n",
+      "Result = VBS 7.08063162164763E-03\n",
       "\n"
      ]
     }
