Updating files, adding documentaion

--- a/analysis/DiffractionGrating_Analysis.ipynb
+++ b/analysis/DiffractionGrating_Analysis.ipynb
@@ -60,7 +60,7 @@
     "    # Get the data\n",
     "\n",
     "    data = {}\n",
-    "    with open('data/'+file_name) as file:\n",
+    "    with open('../data/'+file_name) as file:\n",
     "        reader = csv.reader(file)\n",
     "        i = 0\n",
     "        for row in reader:\n",
