--- a/analysis/Linearity_Analysis.ipynb
+++ b/analysis/Linearity_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "interracial-seafood",
    "metadata": {},
    "outputs": [],
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "young-baptist",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the data\n",
-    "file_name ='linearity.csv'\n",
+    "file_name ='../data/linearity_100ns_0.1_10V.csv'\n",
     "\n",
     "with open(file_name) as file:\n",
     "    reader = csv.reader(file)\n",
@@ -43,7 +43,7 @@
     "            large_V_values = np.array([float(row[j]) for j in range(len(row))])\n",
     "        i += 1\n",
     "        \n",
-    "file_name ='linearity_mid.csv'\n",
+    "file_name ='../data/linearity_100ns_0.1_6V.csv'\n",
     "with open(file_name) as file:\n",
     "    reader = csv.reader(file)\n",
     "    i = 0\n",
